--- a/App1/Dockerfile
+++ b/App1/Dockerfile
@@ -1,4 +1,3 @@
 FROM nginx
-RUN rm -rf /user/share/nginx/html/index.html
-RUN echo "<h1>Hello, I am from App-1<h1>" > /user/share/nginx/html/index.html
-
+RUN rm -rf /usr/share/nginx/html/index.html
+RUN echo "<h1>Hello, I am from APP-1</h1>" > /usr/share/nginx/html/index.html
